# baselhacks_pax

./: .gitignore  links.txt  readme.md
code/backend/: README.md  main.py  pyproject.toml  workflow_agent.py
code/backend/backend.egg-info/: PKG-INFO  requires.txt
code/backend/data/: .gitkeep  12a02b50-f25d-46ff-a376-97d0688c2d79.json
code/backend/data/model/: feature_names.json  label_encoder.joblib  manifest.json  preprocessor.joblib  shap_background.npy  xgboost_model.json
code/frontend/: README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
code/frontend/public/dep_plots/: dep_plot_generator.py
code/frontend/src/: App.jsx  index.css
code/frontend/src/components/: AnalysisAnimation.jsx  Analytics.jsx  CaseDecision.jsx  DataRow.jsx  DocumentDetail.jsx  DocumentList.jsx  DocumentPreview.jsx  ExtractionAnimation.jsx  FileUpload.jsx  Models.jsx  Toast.jsx  UploadModal.jsx
datageneration/: explore_population.ipynb  population_generation.py  xgboost_shap.ipynb
