[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for BaselHacks PAX document processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.120.4",
    "httpx>=0.28.1",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
