[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for BaselHacks PAX document processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.120.4",
    "httpx>=0.28.1",
    "joblib>=1.5.2",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "scikit-learn==1.5.2",
    "shap>=0.49.1",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Single-module layout (mjust uv aodule is `main.py` in the project root)
[tool.setuptools]
py-modules = ["main"]
